--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   lucide_icons: ^0.20.0
   google_fonts: ^2.3.1
   carousel_slider: ^4.0.0
+  fluttertoast: ^8.0.9
 
 dev_dependencies:
   flutter_test:
